[gd_scene load_steps=18 format=3 uid="uid://ggyc1qonudkw"]

[ext_resource type="Script" path="res://src/scripts/player.gd" id="1_7jx1s"]
[ext_resource type="Script" path="res://src/scripts/bullet.gd" id="2_21b7w"]
[ext_resource type="Script" path="res://src/scripts/sprites.gd" id="2_c5ll5"]
[ext_resource type="Texture2D" uid="uid://0hbbu3dd7h8r" path="res://assets/player/bullet.png" id="3_5o716"]
[ext_resource type="Texture2D" uid="uid://dr00irmqo360l" path="res://assets/player/legs.png" id="3_h0o4r"]
[ext_resource type="AudioStream" uid="uid://dk3a30u7gj2cs" path="res://assets/sounds/fire.wav" id="4_6yfri"]
[ext_resource type="Texture2D" uid="uid://bhpuvvdudu28a" path="res://assets/player/torso.png" id="4_qri2m"]
[ext_resource type="Script" path="res://src/tile_map_layer.gd" id="5_5to4d"]
[ext_resource type="Shader" path="res://src/cartridge_tilt.gdshader" id="8_upd2b"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kqe8u"]
size = Vector2(48, 8)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cexy6"]
shader = ExtResource("8_upd2b")
shader_parameter/red_displacement = 0.0
shader_parameter/green_displacement = 0.0
shader_parameter/blue_displacement = 0.0
shader_parameter/ghost = 0.0
shader_parameter/intensity = 0.0
shader_parameter/scan_effect = 0.0
shader_parameter/distortion_effect = 0.0
shader_parameter/negative_effect = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2wkl7"]
shader = ExtResource("8_upd2b")
shader_parameter/red_displacement = 0.0
shader_parameter/green_displacement = 0.0
shader_parameter/blue_displacement = 0.0
shader_parameter/ghost = 0.0
shader_parameter/intensity = 0.0
shader_parameter/scan_effect = 0.0
shader_parameter/distortion_effect = 0.0
shader_parameter/negative_effect = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5nibl"]
shader = ExtResource("8_upd2b")
shader_parameter/red_displacement = 0.0
shader_parameter/green_displacement = 0.0
shader_parameter/blue_displacement = 0.0
shader_parameter/ghost = 0.0
shader_parameter/intensity = 0.0
shader_parameter/scan_effect = 0.0
shader_parameter/distortion_effect = 0.0
shader_parameter/negative_effect = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oqybi"]
size = Vector2(11, 31)

[sub_resource type="Animation" id="Animation_q7dnd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:collision_layer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:control_locked")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_j06nc"]
resource_name = "inv_frames"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:collision_layer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:control_locked")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iol4m"]
_data = {
"RESET": SubResource("Animation_q7dnd"),
"inv_frames": SubResource("Animation_j06nc")
}

[node name="Player" type="CharacterBody2D" groups=["player"]]
z_index = 1
collision_layer = 2
script = ExtResource("1_7jx1s")

[node name="Bullet" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4
script = ExtResource("2_21b7w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bullet"]
position = Vector2(36, 0)
shape = SubResource("RectangleShape2D_kqe8u")

[node name="ShootTimer" type="Timer" parent="Bullet"]
wait_time = 0.1

[node name="Bullet" type="Sprite2D" parent="Bullet"]
material = SubResource("ShaderMaterial_cexy6")
position = Vector2(36, 0)
texture = ExtResource("3_5o716")
hframes = 5
script = ExtResource("5_5to4d")

[node name="ShootingAudio" type="AudioStreamPlayer" parent="Bullet"]
stream = ExtResource("4_6yfri")

[node name="Sprites" type="Node2D" parent="."]
script = ExtResource("2_c5ll5")

[node name="Legs" type="Sprite2D" parent="Sprites"]
material = SubResource("ShaderMaterial_2wkl7")
position = Vector2(2, 8)
texture = ExtResource("3_h0o4r")
hframes = 8
vframes = 2
script = ExtResource("5_5to4d")

[node name="Torso" type="Sprite2D" parent="Sprites"]
material = SubResource("ShaderMaterial_5nibl")
texture = ExtResource("4_qri2m")
hframes = 4
vframes = 5
script = ExtResource("5_5to4d")

[node name="FrameTimer" type="Timer" parent="Sprites"]
wait_time = 0.1
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_oqybi")

[node name="CoyoteTime" type="Timer" parent="."]
wait_time = 0.15

[node name="JumpBufferTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]

[node name="JumpAudio" type="AudioStreamPlayer" parent="."]

[node name="CollisionRayCasts" type="Node2D" parent="."]
position = Vector2(3, 0)

[node name="RayCastLeft" type="RayCast2D" parent="CollisionRayCasts"]
position = Vector2(-7, -14)
target_position = Vector2(0, 29)
hit_from_inside = true

[node name="RayCastRight" type="RayCast2D" parent="CollisionRayCasts"]
position = Vector2(2, -14)
target_position = Vector2(0, 29)
hit_from_inside = true

[node name="InvFrames" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_iol4m")
}

[connection signal="shooted" from="." to="Sprites" method="_on_player_shooted"]
[connection signal="timeout" from="Bullet/ShootTimer" to="Bullet" method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="Sprites/FrameTimer" to="Sprites" method="_on_frame_timer_timeout"]
[connection signal="timeout" from="CoyoteTime" to="." method="_on_coyote_time_timeout"]
[connection signal="timeout" from="JumpBufferTimer" to="." method="_on_jump_buffer_timer_timeout"]
